<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © Ricki Hirner (bitfire web engineering).
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->

<restrictions xmlns:android="http://schemas.android.com/apk/res/android">

    <restriction
        android:key="license"
        android:restrictionType="string"
        android:title="@string/restriction_license"
        android:description="@string/restriction_license_description" />
    <restriction
        android:key="license_signature"
        android:restrictionType="string"
        android:title="@string/restriction_license_signature" />

    <restriction
        android:key="organization"
        android:restrictionType="string"
        android:title="@string/restriction_organization"
        android:description="@string/restriction_organization_description" />
    <restriction
        android:key="logo_url"
        android:restrictionType="string"
        android:title="@string/restriction_logo_url"
        android:description="@string/restriction_logo_url_description" />

    <restriction
        android:key="support_homepage_url"
        android:restrictionType="string"
        android:title="@string/restriction_support_homepage_url"
        android:description="@string/restriction_support_homepage_url_description" />
    <restriction
        android:key="support_email_address"
        android:restrictionType="string"
        android:title="@string/restriction_support_email_address" />
    <restriction
        android:key="support_phone_number"
        android:restrictionType="string"
        android:title="@string/restriction_support_phone_number"
        android:description="@string/restriction_support_phone_number_description" />

    <restriction
        android:key="login_base_url"
        android:restrictionType="string"
        android:title="@string/restriction_login_base_url"
        android:description="@string/restriction_login_base_url_description" />
    <restriction
        android:key="login_user_name"
        android:restrictionType="string"
        android:title="@string/restriction_login_user_name"
        android:description="@string/restriction_login_user_name_description" />
    <restriction
        android:key="max_accounts"
        android:restrictionType="integer"
        android:defaultValue="1"
        android:title="@string/restriction_max_accounts"
        android:description="@string/restriction_max_accounts_description" />

    <restriction
        android:key="override_proxy"
        android:restrictionType="bool"
        android:defaultValue="false"
        android:title="@string/restriction_override_proxy"
        android:description="@string/restriction_override_proxy_description" />
    <restriction
        android:key="override_proxy_host"
        android:restrictionType="string"
        android:title="@string/restriction_override_proxy_host"
        android:description="@string/restriction_override_proxy_host_description" />
    <restriction
        android:key="override_proxy_port"
        android:restrictionType="integer"
        android:title="@string/restriction_override_proxy_port"
        android:description="@string/restriction_override_proxy_port_description" />

    <restriction
        android:key="wifi_only"
        android:restrictionType="bool"
        android:defaultValue="false"
        android:title="@string/restriction_wifi_only"
        android:description="@string/restriction_wifi_only_description" />
    <restriction
        android:key="wifi_only_ssids"
        android:restrictionType="string"
        android:title="@string/restriction_wifi_only_ssids"
        android:description="@string/restriction_wifi_only_ssids_description" />

    <restriction
        android:key="contact_group_method"
        android:restrictionType="choice"
        android:entries="@array/settings_contact_group_method_entries"
        android:entryValues="@array/settings_contact_group_method_values"
        android:defaultValue="GROUP_VCARDS"
        android:title="@string/restriction_contact_group_method"
        android:description="@string/restriction_contact_group_method_description" />

    <restriction
        android:key="manage_calendar_colors"
        android:restrictionType="bool"
        android:defaultValue="true"
        android:title="@string/restriction_manage_calendar_colors"
        android:description="@string/restriction_manage_calendar_colors_description" />
    <restriction
        android:key="event_colors"
        android:restrictionType="bool"
        android:defaultValue="false"
        android:title="@string/restriction_event_colors"
        android:description="@string/restriction_event_colors_description" />

</restrictions>